--- a/ModExtra01/style.css
+++ b/ModExtra01/style.css
@@ -1,108 +1,211 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-*{ 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 :root {
     --primary: #E50914;
     --grey: #141414;
-    --white: #ffffff;
+    --border: #4C4849;
 
 }
 
 html, body {
     margin: 0;
     box-sizing: border-box;
-    color: var(--white);
+    color: white;
 }
+
 ul {
     list-style: none;
     padding: 0;
+    margin: 0;
 }
+
 a {
     text-decoration: none;
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--grey);
 }
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 16px; /* 1rem */
+    padding: 0 16px;
 }
+
 .main-header {
-    position: fixed;
     top: 0;
-    width: 100%; /* 100vw */
-    overflow: hidden;
+    position: fixed;
     height: 70px;
-    background-color: var(--grey);
+    width: 100%;
 }
+
 .main-header .container {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     gap: 40px;
     height: inherit;
+    justify-content: flex-start;
 }
-.main-header img{
+.main-header img {
     width: auto;
     height: 100px;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+.navbar {
     width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
+
 .navbar ul {
     display: flex;
     align-items: center;
-    gap: 40px;
+    gap: 16px;
 }
+
 .navbar ul li a {
-    color: var(--white);
-    font-size: 16px; /* 1rem */
+    color: white;
+    font-size: 16px;
     transition: 0.3s ease;
 }
 .navbar ul li a:hover {
     opacity: 0.8;
 }
+
 .navbar .actions {
     display: flex;
     align-items: center;
     gap: 6px;
 }
-.navbar .actions i{
-    color: var(--white);
+
+.navbar .actions i {
+    color: white;
     cursor: pointer;
     font-size: 24px;
 }
-.actions .search-field{
+
+.actions .search-field {
     display: flex;
     align-items: center;
     position: relative;
 }
-.actions .search-field i{
+
+.actions .search-field i {
     position: absolute;
     left: 6px;
     top: 6px;
     padding: 2px;
 }
-.actions .search-field input{
+
+.actions .search-field input {
     height: 34px;
     padding-left: 34px;
     background: none;
-    color: var(--white);
+    color: white;
     border: solid transparent 1px;
     outline: none;
     width: 0px;
     transition: 0.3s ease;
 }
-.actions .search-field input:focus{
+
+.actions .search-field input:focus {
     width: 215px;
-    border: solid var(--white) 1px;
+    background: black;
+    border: solid white 1px;
+}
+
+.account {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    cursor: pointer;
+    position: relative;
+}
+
+.account img {
+    width: 100%;
+    height: 32px;
+    border-radius: 2px;
+}
+
+.navbar .actions .account i {
+    font-size: 12px;
+}
+
+.navbar .actions .account .account-modal {
+    position: absolute;
+    width: 220px;
+    top: 50px;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    opacity: 0;
+    visibility: hidden;
     transition: 0.3s ease;
+}
+
+.actions .account .account-modal ul {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.actions .account .account-modal ul li {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 12px;
+    width: 100%;
+    padding: 12px;
+    box-sizing: border-box;
+    transition: 0.3s ease;
+}
+
+.actions .account .account-modal ul li:hover {
+    background-color: #100f0f;
+}
+
+.actions .account .account-modal ul li span {
+    font-size: 14px;
+}
+
+.actions .account .account-modal ul li:last-child {
+    border-top: solid var(--border) 2px;
+    padding: 14px;
+}
+
+.actions .account .account-modal ul li:last-child span {
+    text-align: center;
+    width: 100%;
+}
+
+.actions .account .account-modal ul li img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+}
+
+.actions .account .account-modal ul li i {
+    font-size: 24px;
+    color: #B3B3B3;
+}
+
+.actions .account .account-modal .bxs-up-arrow {
+    top: -12px;
+    right: 26px;
+    position: absolute;
+    opacity: 0.6;
+}
+
+.navbar .actions .account .bxs-down-arrow {
+    transition: 0.3s ease;
+}
+
+.navbar .actions .account:hover .bxs-down-arrow {
+    transform: rotate(180deg);
+}
+
+
+.navbar .actions .account:hover .account-modal {
+    visibility: visible;
+    opacity: 1;
 }
